--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,7 @@ jobs:
           go get -v golang.org/x/lint/golint
 
       - name: Run Tests
-        run: go test -race --coverprofile=coverage.coverprofile --covermode=atomic ./...
+        run: go test -race --cover --covermode=atomic ./...
 
       - name: Lint Check
         run: golint -set_exit_status ./...
