--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,5 +1,11 @@
-name: Security
+name: SecurityChecks
 on:
+  pull_request: {}
+  push:
+    branches: ["master","update_semgrep"]
+  schedule:
+    - cron: '30 20 * * *'
+
   workflow_call:
     inputs:
       SEMGREP_MANDATORY:
@@ -29,17 +35,3 @@ jobs:
         run: semgrep ci
         env:
           SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
-
-  # semgrep-with-audit:
-  #   name: Semgrep non mandatory
-  #   runs-on: [ 'self-hosted', '${{ inputs.RUNNER_NAME }}' ]
-  #   if: ${{ inputs.SEMGREP_MANDATORY != 'true' }}
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: returntocorp/semgrep-action@v1
-  #       with:
-  #         auditOn: push
-  #         publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-  #         publishDeployment: 339
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
