--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,43 @@
 name: CI
 on:
   push:
-    branches:
-      - master
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+*
-  pull_request:
-    branches:
-      - master
-jobs:
-  test:
-    name: Run tests and publish test coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.18'
+    branches-ignore:
+      - 'generated'
+      - 'codegen/**'
+      - 'integrated/**'
+      - 'stl-preview-head/**'
+      - 'stl-preview-base/**'
 
-      - name: Run coverage
-        run: |
-         cd resources
-         go test -race -covermode=atomic -coverprofile=coverage.out
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+jobs:
+  lint:
+    timeout-minutes: 10
+    name: lint
+    runs-on: ${{ github.repository == 'razorpay/razorpay-go' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup go
+        uses: actions/setup-go@v5
         with:
-           token: ${{ secrets.CODECOV_TOKEN }}
+          go-version-file: ./go.mod
+
+      - name: Run lints
+        run: ./scripts/lint
+  test:
+    timeout-minutes: 10
+    name: test
+    runs-on: ${{ github.repository == 'razorpay/razorpay-go' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: ./go.mod
+
+      - name: Bootstrap
+        run: ./scripts/bootstrap
+
+      - name: Run tests
+        run: ./scripts/test
